Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -135,3 +135,4 @@ Temporary commit content 1157
 Temporary commit content 1161
 Temporary commit content 1174
 Temporary commit content 1175
+Temporary commit content 1184
