Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -181,3 +181,4 @@ Temporary commit content 1683
 Temporary commit content 1725
 Temporary commit content 1738
 Temporary commit content 1753
+Temporary commit content 1758
