Optimized database queries

--- a/index.html
+++ b/index.html
@@ -137,3 +137,4 @@ Temporary commit content 1174
 Temporary commit content 1175
 Temporary commit content 1184
 Temporary commit content 1192
+Temporary commit content 1195
