Optimized database queries

--- a/index.html
+++ b/index.html
@@ -197,3 +197,4 @@ Temporary commit content 1856
 Temporary commit content 1885
 Temporary commit content 1892
 Temporary commit content 1899
+Temporary commit content 1918
