Optimized database queries

--- a/index.html
+++ b/index.html
@@ -83,3 +83,4 @@ Temporary commit content 433
 Temporary commit content 448
 Temporary commit content 464
 Temporary commit content 476
+Temporary commit content 503
