Optimized database queries

--- a/index.html
+++ b/index.html
@@ -148,3 +148,4 @@ Temporary commit content 1310
 Temporary commit content 1319
 Temporary commit content 1326
 Temporary commit content 1335
+Temporary commit content 1342
