Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -116,3 +116,4 @@ Temporary commit content 946
 Temporary commit content 949
 Temporary commit content 966
 Temporary commit content 969
+Temporary commit content 972
