Optimized database queries

--- a/index.html
+++ b/index.html
@@ -78,3 +78,4 @@ Temporary commit content 393
 Temporary commit content 395
 Temporary commit content 410
 Temporary commit content 419
+Temporary commit content 424
