Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -176,3 +176,4 @@ Temporary commit content 1655
 Temporary commit content 1657
 Temporary commit content 1659
 Temporary commit content 1672
+Temporary commit content 1679
