Updated project documentation

--- a/index.html
+++ b/index.html
@@ -69,3 +69,4 @@ Temporary commit content 258
 Temporary commit content 304
 Temporary commit content 308
 Temporary commit content 318
+Temporary commit content 323
