Updated README with new features

--- a/index.html
+++ b/index.html
@@ -200,3 +200,4 @@ Temporary commit content 1899
 Temporary commit content 1918
 Temporary commit content 1921
 Temporary commit content 1940
+Temporary commit content 1947
