Optimized database queries

--- a/index.html
+++ b/index.html
@@ -98,3 +98,4 @@ Temporary commit content 675
 Temporary commit content 681
 Temporary commit content 698
 Temporary commit content 716
+Temporary commit content 738
