Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -154,3 +154,4 @@ Temporary commit content 1350
 Temporary commit content 1353
 Temporary commit content 1363
 Temporary commit content 1381
+Temporary commit content 1391
