Added initial project plan

--- a/index.html
+++ b/index.html
@@ -55,3 +55,4 @@ Temporary commit content 85
 Temporary commit content 107
 Temporary commit content 116
 Temporary commit content 118
+Temporary commit content 130
