Optimized database queries

--- a/index.html
+++ b/index.html
@@ -38,3 +38,4 @@ Temporary commit content 161
 Temporary commit content 166
 Temporary commit content 190
 Temporary commit content 208
+Temporary commit content 212
