Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -180,3 +180,4 @@ Temporary commit content 1679
 Temporary commit content 1683
 Temporary commit content 1725
 Temporary commit content 1738
+Temporary commit content 1753
