Optimized database queries

--- a/index.html
+++ b/index.html
@@ -113,3 +113,4 @@ Temporary commit content 924
 Temporary commit content 936
 Temporary commit content 939
 Temporary commit content 946
+Temporary commit content 949
