Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -127,3 +127,4 @@ Temporary commit content 1061
 Temporary commit content 1066
 Temporary commit content 1073
 Temporary commit content 1078
+Temporary commit content 1087
