Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -123,3 +123,4 @@ Temporary commit content 1014
 Temporary commit content 1030
 Temporary commit content 1052
 Temporary commit content 1054
+Temporary commit content 1061
