Updated project documentation

--- a/index.html
+++ b/index.html
@@ -182,3 +182,4 @@ Temporary commit content 1725
 Temporary commit content 1738
 Temporary commit content 1753
 Temporary commit content 1758
+Temporary commit content 1765
