Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -150,3 +150,4 @@ Temporary commit content 1326
 Temporary commit content 1335
 Temporary commit content 1342
 Temporary commit content 1348
+Temporary commit content 1350
