Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -118,3 +118,4 @@ Temporary commit content 966
 Temporary commit content 969
 Temporary commit content 972
 Temporary commit content 986
+Temporary commit content 1001
