Added validation for user input

--- a/index.html
+++ b/index.html
@@ -122,3 +122,4 @@ Temporary commit content 1001
 Temporary commit content 1014
 Temporary commit content 1030
 Temporary commit content 1052
+Temporary commit content 1054
