Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -100,3 +100,4 @@ Temporary commit content 698
 Temporary commit content 716
 Temporary commit content 738
 Temporary commit content 757
+Temporary commit content 761
