Optimized database queries

--- a/index.html
+++ b/index.html
@@ -198,3 +198,4 @@ Temporary commit content 1885
 Temporary commit content 1892
 Temporary commit content 1899
 Temporary commit content 1918
+Temporary commit content 1921
