Added validation for user input

--- a/index.html
+++ b/index.html
@@ -156,3 +156,4 @@ Temporary commit content 1363
 Temporary commit content 1381
 Temporary commit content 1391
 Temporary commit content 1396
+Temporary commit content 1406
