Optimized database queries

--- a/index.html
+++ b/index.html
@@ -101,3 +101,4 @@ Temporary commit content 716
 Temporary commit content 738
 Temporary commit content 757
 Temporary commit content 761
+Temporary commit content 777
