Optimized database queries

--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@ Temporary commit content 3
 Temporary commit content 18
 Temporary commit content 20
 Temporary commit content 56
+Temporary commit content 58
