Added validation for user input

--- a/index.html
+++ b/index.html
@@ -177,3 +177,4 @@ Temporary commit content 1657
 Temporary commit content 1659
 Temporary commit content 1672
 Temporary commit content 1679
+Temporary commit content 1683
