Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -103,3 +103,4 @@ Temporary commit content 757
 Temporary commit content 761
 Temporary commit content 777
 Temporary commit content 795
+Temporary commit content 800
