Optimized database queries

--- a/index.html
+++ b/index.html
@@ -119,3 +119,4 @@ Temporary commit content 969
 Temporary commit content 972
 Temporary commit content 986
 Temporary commit content 1001
+Temporary commit content 1014
