Added initial project plan

--- a/index.html
+++ b/index.html
@@ -107,3 +107,4 @@ Temporary commit content 800
 Temporary commit content 825
 Temporary commit content 842
 Temporary commit content 844
+Temporary commit content 849
