Updated README with new features

--- a/index.html
+++ b/index.html
@@ -188,3 +188,4 @@ Temporary commit content 1786
 Temporary commit content 1787
 Temporary commit content 1799
 Temporary commit content 1800
+Temporary commit content 1801
