Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@ Temporary commit content 9
 Temporary commit content 12
 Temporary commit content 24
 Temporary commit content 26
+Temporary commit content 51
