Updated README with new features

--- a/index.html
+++ b/index.html
@@ -170,3 +170,4 @@ Temporary commit content 1564
 Temporary commit content 1571
 Temporary commit content 1579
 Temporary commit content 1599
+Temporary commit content 1621
