Updated README with new features

--- a/index.html
+++ b/index.html
@@ -109,3 +109,4 @@ Temporary commit content 842
 Temporary commit content 844
 Temporary commit content 849
 Temporary commit content 899
+Temporary commit content 924
