Added initial project plan

--- a/index.html
+++ b/index.html
@@ -105,3 +105,4 @@ Temporary commit content 777
 Temporary commit content 795
 Temporary commit content 800
 Temporary commit content 825
+Temporary commit content 842
