Updated project documentation

--- a/index.html
+++ b/index.html
@@ -195,3 +195,4 @@ Temporary commit content 1838
 Temporary commit content 1849
 Temporary commit content 1856
 Temporary commit content 1885
+Temporary commit content 1892
