Updated project documentation

--- a/index.html
+++ b/index.html
@@ -112,3 +112,4 @@ Temporary commit content 899
 Temporary commit content 924
 Temporary commit content 936
 Temporary commit content 939
+Temporary commit content 946
