Updated README with new features

--- a/index.html
+++ b/index.html
@@ -175,3 +175,4 @@ Temporary commit content 1632
 Temporary commit content 1655
 Temporary commit content 1657
 Temporary commit content 1659
+Temporary commit content 1672
