Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -44,3 +44,4 @@ Temporary commit content 219
 Temporary commit content 260
 Temporary commit content 1
 Temporary commit content 3
+Temporary commit content 18
