Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -131,3 +131,4 @@ Temporary commit content 1087
 Temporary commit content 1104
 Temporary commit content 1109
 Temporary commit content 1151
+Temporary commit content 1157
