Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -93,3 +93,4 @@ Temporary commit content 610
 Temporary commit content 628
 Temporary commit content 644
 Temporary commit content 655
+Temporary commit content 666
