Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -25,3 +25,4 @@ Temporary commit content 292
 Temporary commit content 9
 Temporary commit content 12
 Temporary commit content 24
+Temporary commit content 26
