Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -81,3 +81,4 @@ Temporary commit content 419
 Temporary commit content 424
 Temporary commit content 433
 Temporary commit content 448
+Temporary commit content 464
