Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -145,3 +145,4 @@ Temporary commit content 1259
 Temporary commit content 1282
 Temporary commit content 1293
 Temporary commit content 1310
+Temporary commit content 1319
