Added initial project plan

--- a/index.html
+++ b/index.html
@@ -134,3 +134,4 @@ Temporary commit content 1151
 Temporary commit content 1157
 Temporary commit content 1161
 Temporary commit content 1174
+Temporary commit content 1175
