Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -128,3 +128,4 @@ Temporary commit content 1066
 Temporary commit content 1073
 Temporary commit content 1078
 Temporary commit content 1087
+Temporary commit content 1104
