Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -110,3 +110,4 @@ Temporary commit content 844
 Temporary commit content 849
 Temporary commit content 899
 Temporary commit content 924
+Temporary commit content 936
