Updated README with new features

--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@ Temporary commit content 260
 Temporary commit content 1
 Temporary commit content 3
 Temporary commit content 18
+Temporary commit content 20
