Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -133,3 +133,4 @@ Temporary commit content 1109
 Temporary commit content 1151
 Temporary commit content 1157
 Temporary commit content 1161
+Temporary commit content 1174
