Updated README with new features

--- a/index.html
+++ b/index.html
@@ -146,3 +146,4 @@ Temporary commit content 1282
 Temporary commit content 1293
 Temporary commit content 1310
 Temporary commit content 1319
+Temporary commit content 1326
