Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -158,3 +158,4 @@ Temporary commit content 1391
 Temporary commit content 1396
 Temporary commit content 1406
 Temporary commit content 1440
+Temporary commit content 1451
