Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -99,3 +99,4 @@ Temporary commit content 681
 Temporary commit content 698
 Temporary commit content 716
 Temporary commit content 738
+Temporary commit content 757
