Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -164,3 +164,4 @@ Temporary commit content 1462
 Temporary commit content 1467
 Temporary commit content 1494
 Temporary commit content 1496
+Temporary commit content 1528
