Updated README with new features

--- a/index.html
+++ b/index.html
@@ -94,3 +94,4 @@ Temporary commit content 628
 Temporary commit content 644
 Temporary commit content 655
 Temporary commit content 666
+Temporary commit content 675
