Improved error handling logic

--- a/index.html
+++ b/index.html
@@ -173,3 +173,4 @@ Temporary commit content 1599
 Temporary commit content 1621
 Temporary commit content 1632
 Temporary commit content 1655
+Temporary commit content 1657
