Added validation for user input

--- a/index.html
+++ b/index.html
@@ -191,3 +191,4 @@ Temporary commit content 1800
 Temporary commit content 1801
 Temporary commit content 1809
 Temporary commit content 1833
+Temporary commit content 1838
