Updated project documentation

--- a/index.html
+++ b/index.html
@@ -187,3 +187,4 @@ Temporary commit content 1771
 Temporary commit content 1786
 Temporary commit content 1787
 Temporary commit content 1799
+Temporary commit content 1800
