Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -163,3 +163,4 @@ Temporary commit content 1460
 Temporary commit content 1462
 Temporary commit content 1467
 Temporary commit content 1494
+Temporary commit content 1496
