Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -82,3 +82,4 @@ Temporary commit content 424
 Temporary commit content 433
 Temporary commit content 448
 Temporary commit content 464
+Temporary commit content 476
