Updated project documentation

--- a/index.html
+++ b/index.html
@@ -106,3 +106,4 @@ Temporary commit content 795
 Temporary commit content 800
 Temporary commit content 825
 Temporary commit content 842
+Temporary commit content 844
