Added validation for user input

--- a/index.html
+++ b/index.html
@@ -165,3 +165,4 @@ Temporary commit content 1467
 Temporary commit content 1494
 Temporary commit content 1496
 Temporary commit content 1528
+Temporary commit content 1552
