Added validation for user input

--- a/index.html
+++ b/index.html
@@ -71,3 +71,4 @@ Temporary commit content 308
 Temporary commit content 318
 Temporary commit content 323
 Temporary commit content 327
+Temporary commit content 346
