Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -186,3 +186,4 @@ Temporary commit content 1765
 Temporary commit content 1771
 Temporary commit content 1786
 Temporary commit content 1787
+Temporary commit content 1799
