Added initial project plan

--- a/index.html
+++ b/index.html
@@ -183,3 +183,4 @@ Temporary commit content 1738
 Temporary commit content 1753
 Temporary commit content 1758
 Temporary commit content 1765
+Temporary commit content 1771
