Added validation for user input

--- a/index.html
+++ b/index.html
@@ -48,3 +48,4 @@ Temporary commit content 18
 Temporary commit content 20
 Temporary commit content 56
 Temporary commit content 58
+Temporary commit content 61
