Updated project documentation

--- a/index.html
+++ b/index.html
@@ -172,3 +172,4 @@ Temporary commit content 1579
 Temporary commit content 1599
 Temporary commit content 1621
 Temporary commit content 1632
+Temporary commit content 1655
