Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -174,3 +174,4 @@ Temporary commit content 1621
 Temporary commit content 1632
 Temporary commit content 1655
 Temporary commit content 1657
+Temporary commit content 1659
