Optimized database queries

--- a/index.html
+++ b/index.html
@@ -189,3 +189,4 @@ Temporary commit content 1787
 Temporary commit content 1799
 Temporary commit content 1800
 Temporary commit content 1801
+Temporary commit content 1809
