Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -199,3 +199,4 @@ Temporary commit content 1892
 Temporary commit content 1899
 Temporary commit content 1918
 Temporary commit content 1921
+Temporary commit content 1940
