Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -95,3 +95,4 @@ Temporary commit content 644
 Temporary commit content 655
 Temporary commit content 666
 Temporary commit content 675
+Temporary commit content 681
