Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -74,3 +74,4 @@ Temporary commit content 327
 Temporary commit content 346
 Temporary commit content 347
 Temporary commit content 354
+Temporary commit content 393
