Added initial project plan

--- a/index.html
+++ b/index.html
@@ -204,3 +204,4 @@ Temporary commit content 1947
 Temporary commit content 1949
 Temporary commit content 1960
 Temporary commit content 1984
+Temporary commit content 1990
