Added initial project plan

--- a/index.html
+++ b/index.html
@@ -144,3 +144,4 @@ Temporary commit content 1253
 Temporary commit content 1259
 Temporary commit content 1282
 Temporary commit content 1293
+Temporary commit content 1310
