Updated project documentation

--- a/index.html
+++ b/index.html
@@ -202,3 +202,4 @@ Temporary commit content 1921
 Temporary commit content 1940
 Temporary commit content 1947
 Temporary commit content 1949
+Temporary commit content 1960
