Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -141,3 +141,4 @@ Temporary commit content 1195
 Temporary commit content 1217
 Temporary commit content 1222
 Temporary commit content 1253
+Temporary commit content 1259
