Optimized database queries

--- a/index.html
+++ b/index.html
@@ -80,3 +80,4 @@ Temporary commit content 410
 Temporary commit content 419
 Temporary commit content 424
 Temporary commit content 433
+Temporary commit content 448
