Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -117,3 +117,4 @@ Temporary commit content 949
 Temporary commit content 966
 Temporary commit content 969
 Temporary commit content 972
+Temporary commit content 986
