Added initial project plan

--- a/index.html
+++ b/index.html
@@ -27,3 +27,4 @@ Temporary commit content 12
 Temporary commit content 24
 Temporary commit content 26
 Temporary commit content 51
+Temporary commit content 79
