Updated project documentation

--- a/index.html
+++ b/index.html
@@ -162,3 +162,4 @@ Temporary commit content 1451
 Temporary commit content 1460
 Temporary commit content 1462
 Temporary commit content 1467
+Temporary commit content 1494
