Added initial project plan

--- a/index.html
+++ b/index.html
@@ -178,3 +178,4 @@ Temporary commit content 1659
 Temporary commit content 1672
 Temporary commit content 1679
 Temporary commit content 1683
+Temporary commit content 1725
