Updated README with new features

--- a/index.html
+++ b/index.html
@@ -157,3 +157,4 @@ Temporary commit content 1381
 Temporary commit content 1391
 Temporary commit content 1396
 Temporary commit content 1406
+Temporary commit content 1440
