Added validation for user input

--- a/index.html
+++ b/index.html
@@ -102,3 +102,4 @@ Temporary commit content 738
 Temporary commit content 757
 Temporary commit content 761
 Temporary commit content 777
+Temporary commit content 795
