Refactored code for better readability

--- a/index.html
+++ b/index.html
@@ -111,3 +111,4 @@ Temporary commit content 849
 Temporary commit content 899
 Temporary commit content 924
 Temporary commit content 936
+Temporary commit content 939
